--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,10 +13,10 @@ repos:
     -   id: trailing-whitespace
     -   id: check-case-conflict
 
--   repo: https://github.com/dbt-labs/pre-commit-hooks
-    rev: v0.1.0a1
-    hooks:
-    -   id: dbt-core-in-adapters-check
+# -   repo: https://github.com/dbt-labs/pre-commit-hooks
+#     rev: v0.1.0a1
+#     hooks:
+#     -   id: dbt-core-in-adapters-check
 
 -   repo: https://github.com/psf/black
     rev: 24.4.2
